Fix alignment of blog posts for wider screens

--- a/styles.scss
+++ b/styles.scss
@@ -25,10 +25,10 @@ nav {
     position: fixed;
     top: 0;
     z-index: 1;
+    padding: 10px;
 }
 
 nav p {
-    margin: 10px;
     font-size: 20px;
 }
 
@@ -37,7 +37,7 @@ main {
     margin: 0 auto;
     display: block;
     position: relative;
-    top: 42px;
+    top: 44px;
 }
 
 .adverts {
